--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,6 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  dio: ^5.9.0
   logging: ^1.3.0
   firebase_core: ^4.2.0
   firebase_auth: ^6.1.1
@@ -43,6 +42,9 @@ dependencies:
   riverpod_annotation: ^3.0.3
   fpdart: ^1.2.0
   go_router: ^16.3.0
+  image_picker: ^1.2.0
+  cloud_firestore: ^6.1.0
+  firebase_storage: ^13.0.4
   # firebase_auth: ^6.1.1
   # firebase_core: ^4.2.0
   # google_fonts: ^6.3.2
