--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,9 +45,7 @@ dependencies:
   image_picker: ^1.2.0
   cloud_firestore: ^6.1.0
   firebase_storage: ^13.0.4
-  # firebase_auth: ^6.1.1
-  # firebase_core: ^4.2.0
-  # google_fonts: ^6.3.2
+  google_fonts: ^6.3.2
 
 dev_dependencies:
   flutter_test:
