--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev": "nodemon src/index.js"
+    "dev": "nodemon index.js"
   },
   "author": "harsh-dev",
   "license": "ISC",
@@ -14,6 +14,8 @@
     "prettier": "^3.6.2"
   },
   "dependencies": {
-    "@google/genai": "^1.29.0"
+    "@google/generative-ai": "^0.24.1",
+    "dotenv": "^17.2.3",
+    "express": "^5.1.0"
   }
 }
