--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   cloud_firestore: ^6.1.0
   firebase_storage: ^13.0.4
   google_fonts: ^6.3.2
+  http: ^1.6.0
 
 dev_dependencies:
   flutter_test:
